borderbox or box model

--- a/borderbox.html
+++ b/borderbox.html
@@ -12,9 +12,13 @@
                 box-sizing: border-box;
                 background-color: rgb(19, 139, 99);
             }
+            div{
+                margin:70px;
+            }
         </style>
     </head>
     <h2>by using box-sizing:border box property both the block are align on a single lane and if we increase the content area the box size will be increase</h2>
+    <h2>Margin property is applied to div which provide margin to around the div including border(around the hole div) </h2>
     <div class="ex1">This div is 300px wide</div><br>
     <div class="ex2">The width of this div remains at 300px, in spite of the 50px of total left and right padding, because of the box-sizing: border-box property.</div>
 </html>
