flex box properties

--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -50,13 +50,13 @@
     <body>
         <h1>flexible box</h1>
         <div class="flex-container">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div>4</div>
-            <div>5</div>
-            <div>6</div>
-            <div>7</div>
+            <div style="order:3">1</div>
+            <div style="order:5">2</div>
+            <div style="order:1">3</div>
+            <div style="order:7">4</div>
+            <div style="order:4">5</div>
+            <div style="order:2">6</div>
+            <div style="order:6">7</div>
         </div>
         <p>rap or norap property is use to adjust the element the content and with norap it will shrink according to size and with rap it try to maintain there size </p>
 
