--- a/Proinsure/Proinsure.html
+++ b/Proinsure/Proinsure.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <div class="flex header">
-            <div class="proinsure"><a href="#">Proinsure</a></div>
-            <div class="link">
+             <a href="#" class="proinsure">Proinsure</a>
+          <div class="link">
                 <a href="#">Home</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
