--- a/CAFE MENU/FRONT.html
+++ b/CAFE MENU/FRONT.html
@@ -16,31 +16,37 @@
       <div class="div_1">
         <img src="bread.png" alt="bread" style="width:60px; height:60px">
         <h2>Bread</h2>
-        <div class="list">
-        <ul class="rightli">
-          <li>BAGUETTE</li>
-          <li>BAGEL</li>
-          <li>ENGLISH MUFIN</li>
-        </ul>
-        <ul class="rightli">
-          <li>120.00</li>
-          <li>120.00</li>
-          <li>110.00</li>
-        </ul>
-        </div>
+        <table class="list">
+          <tr>
+            <td class="flavor">BAGUETTE</td>
+            <td class="price">120.00</td>
+          </tr>
+          <tr>
+            <td class="flavor">BADEL</td>
+            <td class="price">120.00</td>
+          </tr>
+          <tr>
+            <td class="flavor">ENGLISH MUFFIN</td>
+            <td class="price">110.00</td>
+          </tr>
+
+        </table>
         <h2>Pie</h2>
-        <div class="list">
-          <ul class="rightli">
-            <li>PUMPKIN PIE</li>
-            <li>BLUE BERRY PIE</li>
-            <li>RASPBERRY PIE</li>
-          </ul>
-          <ul class="rightli">
-            <li>350.00</li>
-            <li>405.00</li>
-            <li>360.00</li>
-          </ul>
-        </div>
+        <table class="list">
+          <tr>
+            <td class="flavor">PUMPKIN PIE</td>
+            <td class="price">350.00</td>
+          </tr>
+          <tr>
+            <td class="flavor">BLUE BERRY PIE</td>
+            <td class="price">405.00</td>
+          </tr>
+          <tr>
+            <td class="flavor">RASPBERRY PIE</td>
+            <td class="price">360.00</td>
+          </tr>
+
+        </table>
         <hr>
         <div class="div_1">
           <a href="#" class="link">Order Now!</a>
@@ -58,31 +64,37 @@
       <div class="div_1">
         <img src="coffee-cup.png" alt="coffee-cup" style="width:60px; height:60px">
         <h2>Hot</h2>
-        <div class="list">
-        <ul class="rightli">
-          <li>BARAKO</li>
-          <li>ESPRESSO</li>
-          <li>WHITE MOCHA</li>
-        </ul>
-        <ul class="rightli">
-          <li>100.00</li>
-          <li>100.00</li>
-          <li>110.00</li>
-        </ul>
-        </div>
+          <table class="list">
+            <tr>
+              <td class="flavor">BAGUETTE</td>
+              <td class="price">120.00</td>
+            </tr>
+            <tr>
+              <td class="flavor">BADEL</td>
+              <td class="price">120.00</td>
+            </tr>
+            <tr>
+              <td class="flavor">ENGLISH MUFFIN</td>
+              <td class="price">110.00</td>
+            </tr>
+
+          </table>
         <h2>Cold</h2>
-        <div class="list">
-          <ul class="rightli">
-            <li>FRAPPOCHINO</li>
-            <li>MATCHA</li>
-            <li>ICED AMERICANO</li>
-          </ul>
-          <ul class="rightli">
-            <li>100.00</li>
-            <li>105.00</li>
-            <li>100.00</li>
-          </ul>
-        </div>
+        <table class="list">
+          <tr>
+            <td class="flavor">FRAPUCHINO</td>
+            <td class="price">100.00</td>
+          </tr>
+          <tr>
+            <td class="flavor">MATCHA</td>
+            <td class="price">105.00</td>
+          </tr>
+          <tr>
+            <td class="flavor">ICED AMERICANO</td>
+            <td class="price">100.00</td>
+          </tr>
+
+        </table>
         <hr>
         <div class="div_1">
           <a href="#" class="link">Order Now!</a>
@@ -101,31 +113,37 @@
       <div class="div_1">
         <img src="snack.png" alt="snack" style="width:60px; height:60px">
         <h2>FILIPINO</h2>
-        <div class="list">
-        <ul class="rightli">
-          <li>LUMPIANG SHANGHAI</li>
-          <li>MANI</li>
-          <li>TURON</li>
-        </ul>
-        <ul class="rightli">
-          <li>200.00</li>
-          <li>80.00</li>
-          <li>110.00</li>
-        </ul>
-        </div>
+        <table class="list">
+          <tr>
+            <td class="flavor">LAMPING SHANGHAI</td>
+            <td class="price">200.00</td>
+          </tr>
+          <tr>
+            <td class="flavor">MANI</td>
+            <td class="price">80.00</td>
+          </tr>
+          <tr>
+            <td class="flavor">TURON</td>
+            <td class="price">110.00</td>
+          </tr>
+
+        </table>
         <h2>MAXICAN</h2>
-        <div class="list">
-          <ul class="rightli">
-            <li>NACHOS</li>
-            <li>BURITO</li>
-            <li>TAMALES</li>
-          </ul>
-          <ul class="rightli">
-            <li>100.00</li>
-            <li>200.00</li>
-            <li>95.00</li>
-          </ul>
-        </div>
+        <table class="list">
+          <tr>
+            <td class="flavor">NACHOS</td>
+            <td class="price">110.00</td>
+          </tr>
+          <tr>
+            <td class="flavor">BURRITO</td>
+            <td class="price">200.00</td>
+          </tr>
+          <tr>
+            <td class="flavor">TAMALES</td>
+            <td class="price">95.00</td>
+          </tr>
+
+        </table>
         <hr>
         <div class="div_1">
           <a href="#" class="link">Order Now!</a>
