--- a/Proinsure/Proinsure.html
+++ b/Proinsure/Proinsure.html
@@ -14,5 +14,14 @@
                 <a class="btn" href="#">View Plan</a>
             </div>
         </div>
+        <div class="mid1">
+            <div class="container flex1 align_item">
+                <div class="hr"></div>
+                <h1 class="heading">Humanazing Your Insureance</h1>
+                <p class="headingtext"> Lorem ipsum dolor sit amet consectetru adipisicing elit. Consequatur explicabo temporibus alias magni distinctio sunt unde architecto ipsum dicta, prasentium amet est dolore.</p>
+                <a class="btnsecond" href="#">VIEW PLANS</a>
+            </div>
+
+        </div>
     </body>
 </html>
