--- a/transition_btn.html
+++ b/transition_btn.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+
         <script src="https://kit.fontawesome.com/fb65a100f4.js" crossorigin="anonymous"></script>
     </head>
     <style>
@@ -39,6 +40,7 @@ i{
 
     </style>
     <body>
+        <h2>transition button</h2><br>
         <a href="#" class="btn">BOOK ROOM<i class="fa-solid fa-arrow-right"></i></a>
     </body>
 </html>
