--- a/transition_btn.html
+++ b/transition_btn.html
@@ -13,23 +13,24 @@
     rgba(249, 171, 114, 0.8) 100%
   );
   margin-top: 30px;
-  font-weight: 550;
-  border: 1px solid transparent;
-  font-size: 15px;
-  border-radius: 30px;
-  padding: 12px 28px;
+  font-weight: 400;
+  border: none;
+  font-size: 14px;
+  border-radius: 32px;
+  padding:14px 62px 14px 32px;
   text-decoration: none;
+  cursor:pointer
 }
-i{
+#i{
   
   background-color: white;
-  position: relative;
+  position: absolute;
   animation-name: example;
-  animation-duration: 3s;
-  animation-timing-function: linear;
+  animation-duration: 2s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
-  margin:10px;
+  margin: 0 12px;
+  font-size: 22px;
 }
 
 @keyframes example {
@@ -41,6 +42,6 @@ i{
     </style>
     <body>
         <h2>transition button</h2><br>
-        <a href="#" class="btn">BOOK ROOM<i class="fa-solid fa-arrow-right"></i></a>
+        <button  href="#" class="btn">BOOK ROOM<i id="i" class="fa-solid fa-arrow-right"></i></button>
     </body>
 </html>
